[gd_scene load_steps=17 format=2]

[ext_resource path="res://ui_elements/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui_elements/TitleWindow.tscn" type="PackedScene" id=2]
[ext_resource path="res://tres/fonts/Ubuntu24_Normal.tres" type="DynamicFont" id=3]
[ext_resource path="res://ui_elements/Panel.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui_elements/LineEdit.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui_elements/Button.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/FontAwesome5/fa-solid-900.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://addons/FontAwesome5/FontAwesome.gd" type="Script" id=8]
[ext_resource path="res://screens/AddSystem.gd" type="Script" id=9]
[ext_resource path="res://ui_elements/Notification.tscn" type="PackedScene" id=10]
[ext_resource path="res://tres/fonts/Ubuntu32_Normal.tres" type="DynamicFont" id=11]

[sub_resource type="DynamicFont" id=1]
size = 34
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 34
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxLine" id=3]
color = Color( 1, 1, 1, 1 )
thickness = 2

[sub_resource type="StyleBoxLine" id=4]
color = Color( 1, 1, 1, 1 )
thickness = 2

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )

[node name="AddSystem" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="PanelForm" parent="." instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -334.5
margin_top = -307.0
margin_right = 334.5
margin_bottom = 307.0

[node name="VBx" type="VBoxContainer" parent="PanelForm"]
margin_left = 10.0
margin_top = 10.0
margin_right = 659.0
margin_bottom = 604.0
custom_constants/separation = 20

[node name="HBx" type="HBoxContainer" parent="PanelForm/VBx"]
margin_right = 649.0
margin_bottom = 80.0
custom_constants/separation = 20

[node name="VBxID" type="VBoxContainer" parent="PanelForm/VBx/HBx"]
margin_right = 104.0
margin_bottom = 80.0

[node name="Label" type="Label" parent="PanelForm/VBx/HBx/VBxID"]
margin_right = 104.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "System ID"

[node name="LineEdit" parent="PanelForm/VBx/HBx/VBxID" instance=ExtResource( 5 )]
margin_top = 32.0
margin_right = 104.0
margin_bottom = 80.0
placeholder_text = "snex"

[node name="VBxName" type="VBoxContainer" parent="PanelForm/VBx/HBx"]
margin_left = 124.0
margin_right = 649.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelForm/VBx/HBx/VBxName"]
margin_right = 525.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "System Name"

[node name="LineEdit" parent="PanelForm/VBx/HBx/VBxName" instance=ExtResource( 5 )]
margin_top = 32.0
margin_right = 525.0
margin_bottom = 80.0
placeholder_text = "Super Nientiendo System"

[node name="VBxEmuPath" type="VBoxContainer" parent="PanelForm/VBx"]
margin_top = 100.0
margin_right = 649.0
margin_bottom = 180.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelForm/VBx/VBxEmuPath"]
margin_right = 649.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "Emulator ejecutable/bin path"

[node name="Hbx" type="HBoxContainer" parent="PanelForm/VBx/VBxEmuPath"]
margin_top = 32.0
margin_right = 649.0
margin_bottom = 80.0

[node name="LineEdit" parent="PanelForm/VBx/VBxEmuPath/Hbx" instance=ExtResource( 5 )]
margin_right = 597.0
margin_bottom = 48.0
placeholder_text = "user/emulator/snesx.exe"

[node name="BtnSelectEmuExe" parent="PanelForm/VBx/VBxEmuPath/Hbx" instance=ExtResource( 6 )]
margin_left = 601.0
margin_right = 649.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
text = ""

[node name="FontAwesome" type="Label" parent="PanelForm/VBx/VBxEmuPath/Hbx/BtnSelectEmuExe"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = ""
align = 1
valign = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
icon_size = 34
icon_name = "folder-open"

[node name="VBxRomsPath" type="VBoxContainer" parent="PanelForm/VBx"]
margin_top = 200.0
margin_right = 649.0
margin_bottom = 280.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelForm/VBx/VBxRomsPath"]
margin_right = 649.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "Roms path"

[node name="Hbx" type="HBoxContainer" parent="PanelForm/VBx/VBxRomsPath"]
margin_top = 32.0
margin_right = 649.0
margin_bottom = 80.0

[node name="LineEdit" parent="PanelForm/VBx/VBxRomsPath/Hbx" instance=ExtResource( 5 )]
margin_right = 597.0
margin_bottom = 48.0
placeholder_text = "user/snesx/roms"

[node name="BtnOpenRomsPath" parent="PanelForm/VBx/VBxRomsPath/Hbx" instance=ExtResource( 6 )]
margin_left = 601.0
margin_right = 649.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
text = ""

[node name="FontAwesome" type="Label" parent="PanelForm/VBx/VBxRomsPath/Hbx/BtnOpenRomsPath"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = ""
align = 1
valign = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
icon_size = 34
icon_name = "folder-open"

[node name="Hbx3" type="HBoxContainer" parent="PanelForm/VBx"]
margin_top = 300.0
margin_right = 649.0
margin_bottom = 380.0
custom_constants/separation = 20

[node name="VBxRomsExtensions" type="VBoxContainer" parent="PanelForm/VBx/Hbx3"]
margin_right = 314.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelForm/VBx/Hbx3/VBxRomsExtensions"]
margin_right = 314.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "Roms Extensions"

[node name="LineEdit" parent="PanelForm/VBx/Hbx3/VBxRomsExtensions" instance=ExtResource( 5 )]
margin_top = 32.0
margin_right = 314.0
margin_bottom = 80.0
placeholder_text = "snesx, pcx, bin, zip"

[node name="VBxCustomTheme" type="VBoxContainer" parent="PanelForm/VBx/Hbx3"]
margin_left = 334.0
margin_right = 649.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelForm/VBx/Hbx3/VBxCustomTheme"]
margin_right = 315.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "Color name or color hex"

[node name="LineEdit" parent="PanelForm/VBx/Hbx3/VBxCustomTheme" instance=ExtResource( 5 )]
margin_top = 32.0
margin_right = 315.0
margin_bottom = 80.0
text = "default"
placeholder_text = "example: blue or b2d90a"

[node name="VBxEmuCommand" type="VBoxContainer" parent="PanelForm/VBx"]
margin_top = 400.0
margin_right = 649.0
margin_bottom = 480.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelForm/VBx/VBxEmuCommand"]
margin_right = 649.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "Emulator Command"

[node name="LineEdit" parent="PanelForm/VBx/VBxEmuCommand" instance=ExtResource( 5 )]
margin_top = 32.0
margin_right = 649.0
margin_bottom = 80.0
text = "%%ROMRAW%%"
placeholder_text = "%%ROMRAW%%, -fullscreen"

[node name="HSeparator" type="HSeparator" parent="PanelForm/VBx"]
margin_top = 500.0
margin_right = 649.0
margin_bottom = 504.0
custom_styles/separator = SubResource( 3 )

[node name="HBx2" type="HBoxContainer" parent="PanelForm/VBx"]
margin_top = 524.0
margin_right = 649.0
margin_bottom = 594.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 125

[node name="BtnSave" parent="PanelForm/VBx/HBx2" instance=ExtResource( 6 )]
margin_right = 262.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "SAVE"

[node name="BtnReset" parent="PanelForm/VBx/HBx2" instance=ExtResource( 6 )]
margin_left = 387.0
margin_right = 649.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "RESET"

[node name="BtnDeleteSys" parent="PanelForm/VBx/HBx2" instance=ExtResource( 6 )]
visible = false
margin_left = 516.0
margin_right = 649.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "DELETE"

[node name="Panel" parent="." instance=ExtResource( 4 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = -98.0
margin_right = 284.0
margin_bottom = -39.0
grow_vertical = 0
size_flags_vertical = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 242.0
margin_bottom = 49.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnHelp" parent="Panel/VBoxContainer" instance=ExtResource( 6 )]
margin_right = 232.0
text = "HELP"

[node name="BtnOpenIni" parent="Panel/VBoxContainer" instance=ExtResource( 6 )]
visible = false
margin_top = 59.0
margin_right = 254.0
margin_bottom = 98.0
text = "Open systems.ini"

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
visible = false
margin_top = 59.0
margin_right = 244.0
margin_bottom = 63.0
custom_styles/separator = SubResource( 4 )

[node name="BtnPrevSys" parent="Panel/VBoxContainer" instance=ExtResource( 6 )]
visible = false
margin_top = 71.0
margin_right = 244.0
margin_bottom = 110.0
text = "PREV"

[node name="BtnNextSys" parent="Panel/VBoxContainer" instance=ExtResource( 6 )]
visible = false
margin_top = 100.0
margin_right = 244.0
margin_bottom = 139.0
text = "NEXT"

[node name="Notification" parent="." instance=ExtResource( 10 )]

[node name="SelectFileOrDir" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.588235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="SelectFileOrDir"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 200
custom_constants/margin_top = 100
custom_constants/margin_left = 200
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileEmuDialog" type="FileDialog" parent="SelectFileOrDir/Margin"]
margin_left = 200.0
margin_top = 100.0
margin_right = 1166.0
margin_bottom = 668.0
window_title = "Abrir un Archivo"
mode = 0
access = 2
current_dir = "/Users/danil/Documents/Godot Projects/funemustation"
current_path = "/Users/danil/Documents/Godot Projects/funemustation/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleWindow" parent="." instance=ExtResource( 2 )]
title = "Add System"

[node name="LblWarning" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -937.0
margin_top = -45.0
margin_right = -27.0
margin_bottom = -17.0
custom_fonts/font = ExtResource( 3 )
text = "You must update the game database on options screen after made changes on systems."

[node name="ControlHelp" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ControlHelp"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.596078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnCloseHelp" parent="ControlHelp" instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -85.0
margin_top = -86.0
margin_right = 85.0
margin_bottom = -21.0
grow_horizontal = 2
text = "CLOSE"

[node name="Panel" parent="ControlHelp" instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -409.0
margin_top = -326.0
margin_right = 410.0
margin_bottom = 274.0
custom_styles/panel = SubResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="ControlHelp/Panel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 809.0
margin_bottom = 590.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="ControlHelp/Panel/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 779.0
margin_bottom = 560.0

[node name="VBoxContainer" type="VBoxContainer" parent="ControlHelp/Panel/MarginContainer/ScrollContainer"]
margin_right = 759.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LblEs" type="Label" parent="ControlHelp/Panel/MarginContainer/ScrollContainer/VBoxContainer"]
visible = false
margin_right = 747.0
margin_bottom = 1117.0
custom_fonts/font = ExtResource( 11 )
text = "
*** System ID ***
------------------------
Un id en forma de texto, puede poner lo que quiera (por ejemplo: snes nes psp ps2 etc).


*** System Name ***
-----------------------------
Nombre del sistema que se mostrará en la pantalla.


*** Emulator ejecutable/bin path ***
---------------------------------------------------
Ruta hacia el ejecutable del emulador a usar, la ruta debe ir separada con \"/\" sin importar que use Windows. Puede usar el botón con el icono de la carpeta al lado para seleccionar el emulador directamente.

NOTA: Si deja este campo vacío, FES Launcher abrirá los juegos directamente (como si estuviera haciendo doble click). Esto es útil si quiere agregar juegos nativos de PC u otros ejecutables que no necesitan de usar emulador.


*** Roms path ***
-------------------------
Ruta de la carpeta que contiene los juegos a escanear, puede usar el botón con el icono de la carpeta para seleccionarla.


*** Roms Extensions ***
---------------------------------
Una lista de las extensiones de los archivos a escanear, puede colocar solo una extensión (por ejemplo: snes) o escribir una lista (snes, smc, fig) separando cada elemento con una coma y espacio.

NOTA: Si quiere ejecutar juegos nativos, se recomienda dejar el campo de la ruta de emulador vacía y usar accesos directos como si fueran roms a ejecutar, en windows la extensión de un acceso directo es \"lnk\" (ele, ene, ka).


*** Color name or color hex ***
-------------------------------------------
Puede definir un color personalizado del fondo cuando esté en la lista de juegos del sistema. Puede usar \"default\" para usar el mismo color que desde las opciones, o escribir (blue, red, yellow, blue-dark, cyan, purple, pink, gray) que son los temas preestablecidos. También puede colocar un color en formato hexadecimal (ejemplo: 0081ff o #0081ff).


*** Emulator Command ***
--------------------------------------
Define la línea de comandos a ejecutar del emulador. Por ejemplo si un emulador puede iniciar desde línea de comandos así:

emulator.exe -fullscreen ruta_de_rom /a /b

Entonces usted debe escribir:

-fullscreen, %%ROMRAW%%, /a, /b

(Nótese que además de los espacios, debe agregar una coma al final de cada argumento).

%%ROMRAW%% (el cual es la ruta del archivo sin comillas) será reemplazado automaticamente con la ruta del juego seleccionado. %%ROMRAW%% debería funcionar sin problemas en sistemas Windows. Alternativamente puede usar %%ROM%% si el anterior no funciona.

Algunos emuladores no necesitan la ruta del juego sino el nombre del archivo (ejemplo: MAME, Winkawaks), en este caso puede usar %%ROMNAMERAW%% o %%ROMNAME%%

NOTA: Si la línea de comandos del emulador necesita especificar también otras rutas a archivos, estas igualmente deben usar \"/\" y por lo general funcionan bien sin necesidad de usar comillas. Por ejemplo Retroarch:

-L, C:/Games/RetroArch/cores/mesen_libretro.dll, %%ROMRAW%%


-------------------------------------------------------------
Si todavía necesita ayuda para configurar el launcher, considere comprarlo desde la página itch.io para obtener soporte técnico.

-- dannygaray60 
"
autowrap = true

[node name="LblEn" type="Label" parent="ControlHelp/Panel/MarginContainer/ScrollContainer/VBoxContainer"]
visible = false
margin_right = 747.0
margin_bottom = 1117.0
custom_fonts/font = ExtResource( 11 )
text = "
*** System ID ***
------------------------
An id in text form, you can put whatever you want (for example: snes nes psp ps2 etc).


*** System Name *** ***
-----------------------------
Name of the system that will be displayed on the screen.


*** Emulator executable/bin path ***
---------------------------------------------------
Path to the emulator executable to use, the path must be separated with \"/\" no matter if you use Windows. You can use the button with the folder icon next to it to select the emulator directly.

NOTE: If you leave this field empty, FES Launcher will open the games directly (as if you were double clicking). This is useful if you want to add native PC games or other executables that do not need to use an emulator.


*** Roms path ***
-------------------------
Path of the folder containing the games to scan, you can use the button with the folder icon to select it.


*** Roms Extensions ***
---------------------------------
A list of the extensions of the files to scan, you can put only one extension (for example: snes) or write a list (snes, smc, fig) separating each item with a comma and space.

NOTE: If you want to run native games, it is recommended to leave the emulator path field empty and use shortcuts as if they were roms to run, in windows the extension of a shortcut is \"lnk\" (L, N, K).


*** Color name or color hex ***
-------------------------------------------
You can define a custom background color when you are in the system game list. You can use \"default\" to use the same color as from the options, or type (blue, red, yellow, blue-dark, cyan, purple, pink, gray) which are the preset themes. You can also put a color in hexadecimal format (example: 0081ff or #0081ff).


*** Emulator Command ***
--------------------------------------
Defines the command line to be executed by the emulator. For example if an emulator can start from command line like this:

emulator.exe -fullscreen path_rom /a /b

Then you should type:

-fullscreen, %%ROMRAW%%%, /a, /b

(Note that in addition to the spaces, you must add a comma at the end of each argument).

%%%ROMRAW%% (which is the path to the file without quotes) will be automatically replaced with the path to the selected game. %%ROMRAW%% should work without problems on Windows systems. Alternatively you can use %%ROM%% if the above does not work.

Some emulators don't need the game path but the file name (example: MAME, Winkawaks), in this case you can use %%ROMNAMERAW%% or %%ROMNAME%%.

NOTE: If the emulator command line needs to specify other file paths as well, these should also use \"/\" and usually work fine without using quotes. For example Retroarch:

-L, C:/Games/RetroArch/cores/mesen_libretro.dll, %%ROMRAW%%.


-------------------------------------------------------------
If you still need help setting up the launcher, consider purchasing it from the itch.io page for technical support.

-- dannygaray60 
"
autowrap = true

[connection signal="pressed" from="PanelForm/VBx/VBxEmuPath/Hbx/BtnSelectEmuExe" to="." method="_on_BtnSelectEmuExe_pressed"]
[connection signal="pressed" from="PanelForm/VBx/VBxRomsPath/Hbx/BtnOpenRomsPath" to="." method="_on_BtnOpenRomsPath_pressed"]
[connection signal="pressed" from="PanelForm/VBx/HBx2/BtnSave" to="." method="_on_BtnSave_pressed"]
[connection signal="pressed" from="PanelForm/VBx/HBx2/BtnReset" to="." method="_on_BtnReset_pressed"]
[connection signal="pressed" from="PanelForm/VBx/HBx2/BtnDeleteSys" to="." method="_on_BtnDeleteSys_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/BtnHelp" to="." method="_on_BtnHelp_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/BtnOpenIni" to="." method="_on_BtnOpenIni_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/BtnPrevSys" to="." method="_on_changesys" binds= [ "prev" ]]
[connection signal="pressed" from="Panel/VBoxContainer/BtnNextSys" to="." method="_on_changesys" binds= [ "next" ]]
[connection signal="dir_selected" from="SelectFileOrDir/Margin/FileEmuDialog" to="." method="_on_FileEmuDialog_dir_selected"]
[connection signal="file_selected" from="SelectFileOrDir/Margin/FileEmuDialog" to="." method="_on_FileEmuDialog_file_selected"]
[connection signal="popup_hide" from="SelectFileOrDir/Margin/FileEmuDialog" to="." method="_on_FileEmuDialog_popup_hide"]
[connection signal="btn_back_pressed" from="TitleWindow" to="." method="_on_TitleWindow_btn_back_pressed"]
[connection signal="exit_confirm_dialog_show" from="TitleWindow" to="." method="_on_TitleWindow_exit_confirm_dialog_show"]
[connection signal="pressed" from="ControlHelp/BtnCloseHelp" to="." method="_on_BtnCloseHelp_pressed"]
